--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ body {
     background: linear-gradient(to bottom, #000, #5b0707, #000);
 }
 
+.banner-filmes {
+    transition: 0.2s;
+}
+
 .banner-filmes:hover {
     transform: scale(1.06);
     transition: 0.2s;
@@ -225,6 +229,10 @@ body {
     background: linear-gradient(to top, #5b0707, #000);
 }
 
+.banner-series {
+    transition: 0.2s;
+}
+
 .banner-series:hover {
     transform: scale(1.06);
     transition: 0.2s;
@@ -252,6 +260,7 @@ footer img {
     grid-template-rows: 1fr 1fr;
     padding-top: 1rem;
     color: #908c8c;
+    transition: 0.2s;
 }
 
 .icons {
@@ -263,5 +272,5 @@ footer img {
 
 .redes a:hover {
     color: #eeebeb;
-    transition: 0.3s;
+    transition: 0.2s;
 }
